// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should alter color in a complex value 1`] = `
"
div {
  color: red;
  border: 1px solid white;
  outline: 1px solid red
}
"
`;

exports[`should alter simple color in a single property 1`] = `
"
div {
  color: red
}
"
`;

exports[`should alter simple color in a single property and don’t touch others 1`] = `
"
div {
  color: red;
  border: none;
  width: 100%;
  height: 50px;
}
"
`;

exports[`should alter simple color in multiple properties 1`] = `
"
div {
  color: red;
  background: white
}
"
`;

exports[`should alter simple color to hex color a single property 1`] = `
"
div {
  color: #fffeee
}
"
`;

exports[`should alter simple color to short hex color a single property 1`] = `
"
div {
  color: #79b
}
"
`;
